# codex-desktop-linux

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  flake.nix  install.sh
.github/workflows/: upstream-build-app.yml
contrib/user-local-install/: README.md
docs/: architecture.md  build-and-packaging.md  linux-computer-use.md  native-setup.md  nix.md  troubleshooting.md  updater.md  upstream-dmg-acceptance.md  webview-server-evaluation.md
launcher/: start.sh.template
linux-features/appshots/: README.md  electron-args  feature.json  patch.js  test.js
linux-features/codex-wrapper-updater/: README.md  patch.js  test.js
linux-features/conversation-mode/: patch.js  test.js
linux-features/global-dictation/: test.js
linux-features/open-target-discovery/: README.md  feature.json  patch.js  test.js
linux-features/persistent-status-panel/: patch.js  test.js
linux-features/remote-mobile-control/: patch.js  test.js
linux-features/ui-tweaks/: suggested-prompts.test.js  test.js
linux-features/zed-opener/: README.md  feature.json  patch.js  test.js
scripts/: bootstrap-wizard.sh  patch-linux-window-ui.test.js  workspace-root-open-targets-patch.test.js
scripts/ci/: upstream-dmg-issue.js  upstream-dmg-issue.test.js  validate-nix-pins.sh
scripts/lib/: bundled-plugins.sh  candidate-install.sh  candidate-promotion.py  dmg.sh  install-helpers.sh  linux-update-bridge-patch.js  process-detection.sh
scripts/patches/: avatar-overlay.js  (+1 more)
tests/: scripts_smoke.sh
updater/: Cargo.toml
updater/src/: app.rs  state.rs  wrapper.rs  wrapper_apply.rs
(+24 files in other folders)
